--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_neumorphic:
   dio: ^4.0.6
   flutter_secure_storage: ^5.0.2
+  sqflite: ^2.0.2+1
 
 dev_dependencies:
   flutter_test:
