--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   dio: ^4.0.6
   flutter_secure_storage: ^5.0.2
   sqflite: ^2.0.2+1
+  image_picker: ^0.8.5
 
 dev_dependencies:
   flutter_test:
