--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   sqflite: ^2.0.2+1
   image_picker: ^0.8.5
 
+dependency_overrides:
+  image_picker_android: ^0.8.5+3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
